# brewery

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake  StaticAnalyzers.cmake
src/: CMakeLists.txt
